// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Basic/Header Default 1`] = `
<div
  className="w-full relative z-10 backdrop-blur bg-white/20 after:block after:clear-both py-2"
>
  <div
    className="relative"
    data-headlessui-state=""
  >
    <button
      aria-expanded={false}
      className="md:hidden w-6 h-6 my-1 mr-6 float-right outline-none bg-slate-500/20 active:bg-slate-500/30 rounded"
      data-headlessui-state=""
      id={null}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="w-6 h-6 stroke-slate-300"
        fill="none"
        stroke="currentColor"
        strokeWidth={1.5}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
  </div>
  <div
    style={
      Object {
        "borderWidth": "0",
        "clip": "rect(0, 0, 0, 0)",
        "display": "none",
        "height": 0,
        "left": 1,
        "margin": -1,
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": 1,
        "whiteSpace": "nowrap",
        "width": 1,
      }
    }
  />
  <div
    className="hidden md:flex float-right space-x-2 mr-4"
  >
    <a
      className="block md:inline-block bg-slate-500/20 py-1 px-2 rounded text-cyan-200 hover:text-cyan-300 hover:underline"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="block md:inline-block bg-slate-500/20 py-1 px-2 rounded text-cyan-200 hover:text-cyan-300 hover:underline"
      href="/form/list-filter-head"
      onClick={[Function]}
    >
      Form List Filter Head
    </a>
    <a
      className="block md:inline-block bg-slate-500/20 py-1 px-2 rounded text-cyan-200 hover:text-cyan-300 hover:underline"
      href="/form/dynamic-filter"
      onClick={[Function]}
    >
      Form Dynamic Filter
    </a>
  </div>
</div>
`;

exports[`Storyshots Example/Button Large 1`] = `
<button
  className="storybook-button storybook-button--large storybook-button--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Primary 1`] = `
<button
  className="storybook-button storybook-button--medium storybook-button--primary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Secondary 1`] = `
<button
  className="storybook-button storybook-button--medium storybook-button--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Small 1`] = `
<button
  className="storybook-button storybook-button--small storybook-button--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Header Logged In 1`] = `
<header>
  <div
    className="storybook-header"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
      <h1>
        Acme
      </h1>
    </div>
    <div>
      <span
        className="welcome"
      >
        Welcome, 
        <b>
          Jane Doe
        </b>
        !
      </span>
      <button
        className="storybook-button storybook-button--small storybook-button--secondary"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Log out
      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/Header Logged Out 1`] = `
<header>
  <div
    className="storybook-header"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
      <h1>
        Acme
      </h1>
    </div>
    <div>
      <button
        className="storybook-button storybook-button--small storybook-button--secondary"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Log in
      </button>
      <button
        className="storybook-button storybook-button--small storybook-button--primary"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Sign up
      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/Page Logged In 1`] = `
<article>
  <header>
    <div
      className="storybook-header"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
        <h1>
          Acme
        </h1>
      </div>
      <div>
        <button
          className="storybook-button storybook-button--small storybook-button--secondary"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
          type="button"
        >
          Log in
        </button>
        <button
          className="storybook-button storybook-button--small storybook-button--primary"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
          type="button"
        >
          Sign up
        </button>
      </div>
    </div>
  </header>
  <section
    className="storybook-page"
  >
    <h2>
      Pages in Storybook
    </h2>
    <p>
      We recommend building UIs with a
       
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
       
      process starting with atomic components and ending with pages.
    </p>
    <p>
      Render pages with mock data. This makes it easy to build and review page states without needing to navigate to them in your app. Here are some handy patterns for managing page data in Storybook:
    </p>
    <ul>
      <li>
        Use a higher-level connected component. Storybook helps you compose such data from the "args" of child component stories
      </li>
      <li>
        Assemble data in the page component from your services. You can mock these services out using Storybook.
      </li>
    </ul>
    <p>
      Get a guided tutorial on component-driven development at
       
      <a
        href="renderers/react/template/cli/ts/Page"
        rel="noopener noreferrer"
        target="_blank"
      >
        Storybook tutorials
      </a>
      . Read more in the
       
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      .
    </p>
    <div
      className="tip-wrapper"
    >
      <span
        className="tip"
      >
        Tip
      </span>
       Adjust the width of the canvas with the
       
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      Viewports addon in the toolbar
    </div>
  </section>
</article>
`;

exports[`Storyshots Example/Page Logged Out 1`] = `
<article>
  <header>
    <div
      className="storybook-header"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
        <h1>
          Acme
        </h1>
      </div>
      <div>
        <button
          className="storybook-button storybook-button--small storybook-button--secondary"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
          type="button"
        >
          Log in
        </button>
        <button
          className="storybook-button storybook-button--small storybook-button--primary"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
          type="button"
        >
          Sign up
        </button>
      </div>
    </div>
  </header>
  <section
    className="storybook-page"
  >
    <h2>
      Pages in Storybook
    </h2>
    <p>
      We recommend building UIs with a
       
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
       
      process starting with atomic components and ending with pages.
    </p>
    <p>
      Render pages with mock data. This makes it easy to build and review page states without needing to navigate to them in your app. Here are some handy patterns for managing page data in Storybook:
    </p>
    <ul>
      <li>
        Use a higher-level connected component. Storybook helps you compose such data from the "args" of child component stories
      </li>
      <li>
        Assemble data in the page component from your services. You can mock these services out using Storybook.
      </li>
    </ul>
    <p>
      Get a guided tutorial on component-driven development at
       
      <a
        href="renderers/react/template/cli/ts/Page"
        rel="noopener noreferrer"
        target="_blank"
      >
        Storybook tutorials
      </a>
      . Read more in the
       
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      .
    </p>
    <div
      className="tip-wrapper"
    >
      <span
        className="tip"
      >
        Tip
      </span>
       Adjust the width of the canvas with the
       
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      Viewports addon in the toolbar
    </div>
  </section>
</article>
`;

exports[`Storyshots TODO/InboxScreen Default 1`] = `
<div
  className="w-full h-full bg-[#2cc5d2] "
>
  <div
    className="w-full relative z-10 backdrop-blur bg-white/20 after:block after:clear-both py-2"
  >
    <div
      className="relative"
      data-headlessui-state=""
    >
      <button
        aria-expanded={false}
        className="md:hidden w-6 h-6 my-1 mr-6 float-right outline-none bg-slate-500/20 active:bg-slate-500/30 rounded"
        data-headlessui-state=""
        id={null}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-6 h-6 stroke-slate-300"
          fill="none"
          stroke="currentColor"
          strokeWidth={1.5}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      style={
        Object {
          "borderWidth": "0",
          "clip": "rect(0, 0, 0, 0)",
          "display": "none",
          "height": 0,
          "left": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": 1,
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
    />
    <div
      className="hidden md:flex float-right space-x-2 mr-4"
    >
      <a
        className="block md:inline-block bg-slate-500/20 py-1 px-2 rounded text-cyan-200 hover:text-cyan-300 hover:underline"
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
    </div>
  </div>
  <div
    className="py-6 px-6 md:px-16"
  >
    <div
      className="min-h-[calc(100vh-96px)] bg-white"
    >
      <nav
        className="text-left md:text-center px-6 py-5 bg-[#d3edf4]"
      >
        <h1
          className="text-xl leading-5 cursor-pointer whitespace-nowrap"
        >
          <span
            className="overflow-hidden text-ellipsis whitespace-nowrap font-extrabold text-[#1c3f53] inline-block align-top max-w-full"
          >
            TaskBox
          </span>
        </h1>
      </nav>
      <div
        className="relative bg-white min-h-[288px]"
      >
        <div
          className="TASK_PINNED group/item flex leading-5 flex-wrap h-12 w-full bg-white hover:bg-gradient-to-t from-[#e5f9f7] to-[#f0fffd] [&+&]:border-t [&+&]:border-[#f0f9fb]"
        >
          <label
            className="relative h-12 flex items-center justify-center align-middle w-11 group-hover/item:cursor-pointer"
          >
            <input
              checked={false}
              className="invisible peer"
              disabled={true}
              name="checked"
              type="checkbox"
            />
            <span
              className="block peer-checked:hidden absolute top-1/2 right-auto bottom-auto left-1/2 w-3.5 h-3.5 -translate-x-1/2 -translate-y-1/2 bg-transparent shadow-[0_0_0_1px_#2cc5d2_inset]"
              onClick={[Function]}
            />
            <svg
              aria-hidden="true"
              className="hidden peer-checked:block absolute top-1/2 right-auto bottom-auto left-1/2 w-5 h-5 -translate-x-1/2 -translate-y-1/2 stroke-[#2cc5d2]"
              fill="none"
              stroke="currentColor"
              strokeWidth={1.5}
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.5 12.75l6 6 9-13.5"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </label>
          <div
            className="overflow-hidden text-ellipsis whitespace-nowrap flex-grow"
          >
            <input
              className="text-slate-500 [.TASK\\\\_ARCHIVED_&]:text-[#aaa] leading-[48px] outline-none bg-transparent w-full focus:cursor-text"
              placeholder="Input title"
              readOnly={true}
              type="text"
              value="Task 3"
            />
          </div>
          <div
            className="pr-5 transition-all duration-200 ease-in"
            onClick={[Function]}
          >
            <a
              className="flex h-12 items-center"
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="w-4 h-4 stroke-[#2cc5d2] [.TASK\\\\_PINNED_&]:fill-[#2cc5d2] cursor-pointer"
                fill="none"
                stroke="currentColor"
                strokeWidth={1.5}
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                />
              </svg>
            </a>
          </div>
        </div>
        <div
          className="TASK_INBOX group/item flex leading-5 flex-wrap h-12 w-full bg-white hover:bg-gradient-to-t from-[#e5f9f7] to-[#f0fffd] [&+&]:border-t [&+&]:border-[#f0f9fb]"
        >
          <label
            className="relative h-12 flex items-center justify-center align-middle w-11 group-hover/item:cursor-pointer"
          >
            <input
              checked={false}
              className="invisible peer"
              disabled={true}
              name="checked"
              type="checkbox"
            />
            <span
              className="block peer-checked:hidden absolute top-1/2 right-auto bottom-auto left-1/2 w-3.5 h-3.5 -translate-x-1/2 -translate-y-1/2 bg-transparent shadow-[0_0_0_1px_#2cc5d2_inset]"
              onClick={[Function]}
            />
            <svg
              aria-hidden="true"
              className="hidden peer-checked:block absolute top-1/2 right-auto bottom-auto left-1/2 w-5 h-5 -translate-x-1/2 -translate-y-1/2 stroke-[#2cc5d2]"
              fill="none"
              stroke="currentColor"
              strokeWidth={1.5}
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.5 12.75l6 6 9-13.5"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </label>
          <div
            className="overflow-hidden text-ellipsis whitespace-nowrap flex-grow"
          >
            <input
              className="text-slate-500 [.TASK\\\\_ARCHIVED_&]:text-[#aaa] leading-[48px] outline-none bg-transparent w-full focus:cursor-text"
              placeholder="Input title"
              readOnly={true}
              type="text"
              value="Task 2"
            />
          </div>
          <div
            className="pr-5 transition-all duration-200 ease-in"
            onClick={[Function]}
          >
            <a
              className="flex h-12 items-center"
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="w-4 h-4 stroke-[#2cc5d2] [.TASK\\\\_PINNED_&]:fill-[#2cc5d2] cursor-pointer"
                fill="none"
                stroke="currentColor"
                strokeWidth={1.5}
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                />
              </svg>
            </a>
          </div>
        </div>
        <div
          className="TASK_ARCHIVED group/item flex leading-5 flex-wrap h-12 w-full bg-white hover:bg-gradient-to-t from-[#e5f9f7] to-[#f0fffd] [&+&]:border-t [&+&]:border-[#f0f9fb]"
        >
          <label
            className="relative h-12 flex items-center justify-center align-middle w-11 group-hover/item:cursor-pointer"
          >
            <input
              checked={true}
              className="invisible peer"
              disabled={true}
              name="checked"
              type="checkbox"
            />
            <span
              className="block peer-checked:hidden absolute top-1/2 right-auto bottom-auto left-1/2 w-3.5 h-3.5 -translate-x-1/2 -translate-y-1/2 bg-transparent shadow-[0_0_0_1px_#2cc5d2_inset]"
              onClick={[Function]}
            />
            <svg
              aria-hidden="true"
              className="hidden peer-checked:block absolute top-1/2 right-auto bottom-auto left-1/2 w-5 h-5 -translate-x-1/2 -translate-y-1/2 stroke-[#2cc5d2]"
              fill="none"
              stroke="currentColor"
              strokeWidth={1.5}
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.5 12.75l6 6 9-13.5"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </label>
          <div
            className="overflow-hidden text-ellipsis whitespace-nowrap flex-grow"
          >
            <input
              className="text-slate-500 [.TASK\\\\_ARCHIVED_&]:text-[#aaa] leading-[48px] outline-none bg-transparent w-full focus:cursor-text"
              placeholder="Input title"
              readOnly={true}
              type="text"
              value="Task 1"
            />
          </div>
          <div
            className="pr-5 transition-all duration-200 ease-in"
            onClick={[Function]}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TODO/InboxScreen Error State 1`] = `
<div
  className="w-full h-full bg-[#2cc5d2] "
>
  <div
    className="w-full relative z-10 backdrop-blur bg-white/20 after:block after:clear-both py-2"
  >
    <div
      className="relative"
      data-headlessui-state=""
    >
      <button
        aria-expanded={false}
        className="md:hidden w-6 h-6 my-1 mr-6 float-right outline-none bg-slate-500/20 active:bg-slate-500/30 rounded"
        data-headlessui-state=""
        id={null}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-6 h-6 stroke-slate-300"
          fill="none"
          stroke="currentColor"
          strokeWidth={1.5}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      style={
        Object {
          "borderWidth": "0",
          "clip": "rect(0, 0, 0, 0)",
          "display": "none",
          "height": 0,
          "left": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": 1,
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
    />
    <div
      className="hidden md:flex float-right space-x-2 mr-4"
    >
      <a
        className="block md:inline-block bg-slate-500/20 py-1 px-2 rounded text-cyan-200 hover:text-cyan-300 hover:underline"
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
    </div>
  </div>
  <div
    className="py-6 px-6 md:px-16"
  >
    <div
      className="min-h-[calc(100vh-96px)] bg-white"
    >
      <div
        className="absolute top-1/2 right-0 bottom-auto left-0 w-auto h-auto text-center -translate-y-1/2"
      >
        <svg
          className="w-12 leading-14 stroke-[#2cc5d2] block mx-auto"
          fill="none"
          stroke="currentColor"
          strokeWidth={1.5}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.182 16.318A4.486 4.486 0 0012.016 15a4.486 4.486 0 00-3.198 1.318M21 12a9 9 0 11-18 0 9 9 0 0118 0zM9.75 9.75c0 .414-.168.75-.375.75S9 10.164 9 9.75 9.168 9 9.375 9s.375.336.375.75zm-.375 0h.008v.015h-.008V9.75zm5.625 0c0 .414-.168.75-.375.75s-.375-.336-.375-.75.168-.75.375-.75.375.336.375.75zm-.375 0h.008v.015h-.008V9.75z"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
        <div
          className="text-base font-extrabold text-slate-600"
        >
          加载失败！
        </div>
        <div
          className="text-sm text-slate-500"
        >
          Something went wrong
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TODO/Task Archived 1`] = `
<div
  className="TASK_ARCHIVED group/item flex leading-5 flex-wrap h-12 w-full bg-white hover:bg-gradient-to-t from-[#e5f9f7] to-[#f0fffd] [&+&]:border-t [&+&]:border-[#f0f9fb]"
>
  <label
    className="relative h-12 flex items-center justify-center align-middle w-11 group-hover/item:cursor-pointer"
  >
    <input
      checked={true}
      className="invisible peer"
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="block peer-checked:hidden absolute top-1/2 right-auto bottom-auto left-1/2 w-3.5 h-3.5 -translate-x-1/2 -translate-y-1/2 bg-transparent shadow-[0_0_0_1px_#2cc5d2_inset]"
      onClick={[Function]}
    />
    <svg
      aria-hidden="true"
      className="hidden peer-checked:block absolute top-1/2 right-auto bottom-auto left-1/2 w-5 h-5 -translate-x-1/2 -translate-y-1/2 stroke-[#2cc5d2]"
      fill="none"
      stroke="currentColor"
      strokeWidth={1.5}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4.5 12.75l6 6 9-13.5"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </label>
  <div
    className="overflow-hidden text-ellipsis whitespace-nowrap flex-grow"
  >
    <input
      className="text-slate-500 [.TASK\\\\_ARCHIVED_&]:text-[#aaa] leading-[48px] outline-none bg-transparent w-full focus:cursor-text"
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="pr-5 transition-all duration-200 ease-in"
    onClick={[Function]}
  />
</div>
`;

exports[`Storyshots TODO/Task Default 1`] = `
<div
  className="TASK_INBOX group/item flex leading-5 flex-wrap h-12 w-full bg-white hover:bg-gradient-to-t from-[#e5f9f7] to-[#f0fffd] [&+&]:border-t [&+&]:border-[#f0f9fb]"
>
  <label
    className="relative h-12 flex items-center justify-center align-middle w-11 group-hover/item:cursor-pointer"
  >
    <input
      checked={false}
      className="invisible peer"
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="block peer-checked:hidden absolute top-1/2 right-auto bottom-auto left-1/2 w-3.5 h-3.5 -translate-x-1/2 -translate-y-1/2 bg-transparent shadow-[0_0_0_1px_#2cc5d2_inset]"
      onClick={[Function]}
    />
    <svg
      aria-hidden="true"
      className="hidden peer-checked:block absolute top-1/2 right-auto bottom-auto left-1/2 w-5 h-5 -translate-x-1/2 -translate-y-1/2 stroke-[#2cc5d2]"
      fill="none"
      stroke="currentColor"
      strokeWidth={1.5}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4.5 12.75l6 6 9-13.5"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </label>
  <div
    className="overflow-hidden text-ellipsis whitespace-nowrap flex-grow"
  >
    <input
      className="text-slate-500 [.TASK\\\\_ARCHIVED_&]:text-[#aaa] leading-[48px] outline-none bg-transparent w-full focus:cursor-text"
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="pr-5 transition-all duration-200 ease-in"
    onClick={[Function]}
  >
    <a
      className="flex h-12 items-center"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="w-4 h-4 stroke-[#2cc5d2] [.TASK\\\\_PINNED_&]:fill-[#2cc5d2] cursor-pointer"
        fill="none"
        stroke="currentColor"
        strokeWidth={1.5}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`Storyshots TODO/Task Pinned 1`] = `
<div
  className="TASK_PINNED group/item flex leading-5 flex-wrap h-12 w-full bg-white hover:bg-gradient-to-t from-[#e5f9f7] to-[#f0fffd] [&+&]:border-t [&+&]:border-[#f0f9fb]"
>
  <label
    className="relative h-12 flex items-center justify-center align-middle w-11 group-hover/item:cursor-pointer"
  >
    <input
      checked={false}
      className="invisible peer"
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="block peer-checked:hidden absolute top-1/2 right-auto bottom-auto left-1/2 w-3.5 h-3.5 -translate-x-1/2 -translate-y-1/2 bg-transparent shadow-[0_0_0_1px_#2cc5d2_inset]"
      onClick={[Function]}
    />
    <svg
      aria-hidden="true"
      className="hidden peer-checked:block absolute top-1/2 right-auto bottom-auto left-1/2 w-5 h-5 -translate-x-1/2 -translate-y-1/2 stroke-[#2cc5d2]"
      fill="none"
      stroke="currentColor"
      strokeWidth={1.5}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4.5 12.75l6 6 9-13.5"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </label>
  <div
    className="overflow-hidden text-ellipsis whitespace-nowrap flex-grow"
  >
    <input
      className="text-slate-500 [.TASK\\\\_ARCHIVED_&]:text-[#aaa] leading-[48px] outline-none bg-transparent w-full focus:cursor-text"
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="pr-5 transition-all duration-200 ease-in"
    onClick={[Function]}
  >
    <a
      className="flex h-12 items-center"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="w-4 h-4 stroke-[#2cc5d2] [.TASK\\\\_PINNED_&]:fill-[#2cc5d2] cursor-pointer"
        fill="none"
        stroke="currentColor"
        strokeWidth={1.5}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`Storyshots TODO/TaskList Default 1`] = `
<div
  className="relative bg-white min-h-[288px]"
>
  <div
    className="TASK_INBOX group/item flex leading-5 flex-wrap h-12 w-full bg-white hover:bg-gradient-to-t from-[#e5f9f7] to-[#f0fffd] [&+&]:border-t [&+&]:border-[#f0f9fb]"
  >
    <label
      className="relative h-12 flex items-center justify-center align-middle w-11 group-hover/item:cursor-pointer"
    >
      <input
        checked={false}
        className="invisible peer"
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="block peer-checked:hidden absolute top-1/2 right-auto bottom-auto left-1/2 w-3.5 h-3.5 -translate-x-1/2 -translate-y-1/2 bg-transparent shadow-[0_0_0_1px_#2cc5d2_inset]"
        onClick={[Function]}
      />
      <svg
        aria-hidden="true"
        className="hidden peer-checked:block absolute top-1/2 right-auto bottom-auto left-1/2 w-5 h-5 -translate-x-1/2 -translate-y-1/2 stroke-[#2cc5d2]"
        fill="none"
        stroke="currentColor"
        strokeWidth={1.5}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.5 12.75l6 6 9-13.5"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </label>
    <div
      className="overflow-hidden text-ellipsis whitespace-nowrap flex-grow"
    >
      <input
        className="text-slate-500 [.TASK\\\\_ARCHIVED_&]:text-[#aaa] leading-[48px] outline-none bg-transparent w-full focus:cursor-text"
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 1"
      />
    </div>
    <div
      className="pr-5 transition-all duration-200 ease-in"
      onClick={[Function]}
    >
      <a
        className="flex h-12 items-center"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="w-4 h-4 stroke-[#2cc5d2] [.TASK\\\\_PINNED_&]:fill-[#2cc5d2] cursor-pointer"
          fill="none"
          stroke="currentColor"
          strokeWidth={1.5}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </a>
    </div>
  </div>
  <div
    className="TASK_INBOX group/item flex leading-5 flex-wrap h-12 w-full bg-white hover:bg-gradient-to-t from-[#e5f9f7] to-[#f0fffd] [&+&]:border-t [&+&]:border-[#f0f9fb]"
  >
    <label
      className="relative h-12 flex items-center justify-center align-middle w-11 group-hover/item:cursor-pointer"
    >
      <input
        checked={false}
        className="invisible peer"
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="block peer-checked:hidden absolute top-1/2 right-auto bottom-auto left-1/2 w-3.5 h-3.5 -translate-x-1/2 -translate-y-1/2 bg-transparent shadow-[0_0_0_1px_#2cc5d2_inset]"
        onClick={[Function]}
      />
      <svg
        aria-hidden="true"
        className="hidden peer-checked:block absolute top-1/2 right-auto bottom-auto left-1/2 w-5 h-5 -translate-x-1/2 -translate-y-1/2 stroke-[#2cc5d2]"
        fill="none"
        stroke="currentColor"
        strokeWidth={1.5}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.5 12.75l6 6 9-13.5"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </label>
    <div
      className="overflow-hidden text-ellipsis whitespace-nowrap flex-grow"
    >
      <input
        className="text-slate-500 [.TASK\\\\_ARCHIVED_&]:text-[#aaa] leading-[48px] outline-none bg-transparent w-full focus:cursor-text"
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 2"
      />
    </div>
    <div
      className="pr-5 transition-all duration-200 ease-in"
      onClick={[Function]}
    >
      <a
        className="flex h-12 items-center"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="w-4 h-4 stroke-[#2cc5d2] [.TASK\\\\_PINNED_&]:fill-[#2cc5d2] cursor-pointer"
          fill="none"
          stroke="currentColor"
          strokeWidth={1.5}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </a>
    </div>
  </div>
  <div
    className="TASK_INBOX group/item flex leading-5 flex-wrap h-12 w-full bg-white hover:bg-gradient-to-t from-[#e5f9f7] to-[#f0fffd] [&+&]:border-t [&+&]:border-[#f0f9fb]"
  >
    <label
      className="relative h-12 flex items-center justify-center align-middle w-11 group-hover/item:cursor-pointer"
    >
      <input
        checked={false}
        className="invisible peer"
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="block peer-checked:hidden absolute top-1/2 right-auto bottom-auto left-1/2 w-3.5 h-3.5 -translate-x-1/2 -translate-y-1/2 bg-transparent shadow-[0_0_0_1px_#2cc5d2_inset]"
        onClick={[Function]}
      />
      <svg
        aria-hidden="true"
        className="hidden peer-checked:block absolute top-1/2 right-auto bottom-auto left-1/2 w-5 h-5 -translate-x-1/2 -translate-y-1/2 stroke-[#2cc5d2]"
        fill="none"
        stroke="currentColor"
        strokeWidth={1.5}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.5 12.75l6 6 9-13.5"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </label>
    <div
      className="overflow-hidden text-ellipsis whitespace-nowrap flex-grow"
    >
      <input
        className="text-slate-500 [.TASK\\\\_ARCHIVED_&]:text-[#aaa] leading-[48px] outline-none bg-transparent w-full focus:cursor-text"
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 3"
      />
    </div>
    <div
      className="pr-5 transition-all duration-200 ease-in"
      onClick={[Function]}
    >
      <a
        className="flex h-12 items-center"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="w-4 h-4 stroke-[#2cc5d2] [.TASK\\\\_PINNED_&]:fill-[#2cc5d2] cursor-pointer"
          fill="none"
          stroke="currentColor"
          strokeWidth={1.5}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots TODO/TaskList Empty 1`] = `
<div
  className="relative bg-white min-h-[288px]"
>
  <div
    className="absolute top-1/2 right-0 bottom-auto left-0 w-auto h-auto text-center -translate-y-1/2"
  >
    <svg
      aria-hidden="true"
      className="w-12 leading-14 stroke-[#2cc5d2] block mx-auto"
      fill="none"
      stroke="currentColor"
      strokeWidth={1.5}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4.5 12.75l6 6 9-13.5"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
    <div
      className="text-base font-extrabold text-slate-900"
    >
      Oh no!
    </div>
    <div
      className="text-sm text-slate-600"
    >
      Something went wrong
    </div>
  </div>
</div>
`;

exports[`Storyshots TODO/TaskList Loading 1`] = `
<div
  className="relative bg-white min-h-[288px]"
>
  <div
    className="[&+&]:border-t [&+&]:border-[#f0f9fb] h-12 w-full bg-white flex items-center leading-4 pl-4"
  >
    <span
      className="w-3 h-3 mr-4 bg-[#eee] text-transparent cursor-progress inline-block animate-pulse"
    />
    <span
      className=""
    >
      <span
        className="bg-[#eee] text-transparent cursor-progress inline-block animate-pulse"
      >
        Loading
      </span>
       
      <span
        className="bg-[#eee] text-transparent cursor-progress inline-block animate-pulse"
      >
        cool
      </span>
       
      <span
        className="bg-[#eee] text-transparent cursor-progress inline-block animate-pulse"
      >
        state
      </span>
    </span>
  </div>
  <div
    className="[&+&]:border-t [&+&]:border-[#f0f9fb] h-12 w-full bg-white flex items-center leading-4 pl-4"
  >
    <span
      className="w-3 h-3 mr-4 bg-[#eee] text-transparent cursor-progress inline-block animate-pulse"
    />
    <span
      className=""
    >
      <span
        className="bg-[#eee] text-transparent cursor-progress inline-block animate-pulse"
      >
        Loading
      </span>
       
      <span
        className="bg-[#eee] text-transparent cursor-progress inline-block animate-pulse"
      >
        cool
      </span>
       
      <span
        className="bg-[#eee] text-transparent cursor-progress inline-block animate-pulse"
      >
        state
      </span>
    </span>
  </div>
  <div
    className="[&+&]:border-t [&+&]:border-[#f0f9fb] h-12 w-full bg-white flex items-center leading-4 pl-4"
  >
    <span
      className="w-3 h-3 mr-4 bg-[#eee] text-transparent cursor-progress inline-block animate-pulse"
    />
    <span
      className=""
    >
      <span
        className="bg-[#eee] text-transparent cursor-progress inline-block animate-pulse"
      >
        Loading
      </span>
       
      <span
        className="bg-[#eee] text-transparent cursor-progress inline-block animate-pulse"
      >
        cool
      </span>
       
      <span
        className="bg-[#eee] text-transparent cursor-progress inline-block animate-pulse"
      >
        state
      </span>
    </span>
  </div>
  <div
    className="[&+&]:border-t [&+&]:border-[#f0f9fb] h-12 w-full bg-white flex items-center leading-4 pl-4"
  >
    <span
      className="w-3 h-3 mr-4 bg-[#eee] text-transparent cursor-progress inline-block animate-pulse"
    />
    <span
      className=""
    >
      <span
        className="bg-[#eee] text-transparent cursor-progress inline-block animate-pulse"
      >
        Loading
      </span>
       
      <span
        className="bg-[#eee] text-transparent cursor-progress inline-block animate-pulse"
      >
        cool
      </span>
       
      <span
        className="bg-[#eee] text-transparent cursor-progress inline-block animate-pulse"
      >
        state
      </span>
    </span>
  </div>
  <div
    className="[&+&]:border-t [&+&]:border-[#f0f9fb] h-12 w-full bg-white flex items-center leading-4 pl-4"
  >
    <span
      className="w-3 h-3 mr-4 bg-[#eee] text-transparent cursor-progress inline-block animate-pulse"
    />
    <span
      className=""
    >
      <span
        className="bg-[#eee] text-transparent cursor-progress inline-block animate-pulse"
      >
        Loading
      </span>
       
      <span
        className="bg-[#eee] text-transparent cursor-progress inline-block animate-pulse"
      >
        cool
      </span>
       
      <span
        className="bg-[#eee] text-transparent cursor-progress inline-block animate-pulse"
      >
        state
      </span>
    </span>
  </div>
  <div
    className="[&+&]:border-t [&+&]:border-[#f0f9fb] h-12 w-full bg-white flex items-center leading-4 pl-4"
  >
    <span
      className="w-3 h-3 mr-4 bg-[#eee] text-transparent cursor-progress inline-block animate-pulse"
    />
    <span
      className=""
    >
      <span
        className="bg-[#eee] text-transparent cursor-progress inline-block animate-pulse"
      >
        Loading
      </span>
       
      <span
        className="bg-[#eee] text-transparent cursor-progress inline-block animate-pulse"
      >
        cool
      </span>
       
      <span
        className="bg-[#eee] text-transparent cursor-progress inline-block animate-pulse"
      >
        state
      </span>
    </span>
  </div>
</div>
`;

exports[`Storyshots TODO/TaskList With Pinned Tasks 1`] = `
<div
  className="relative bg-white min-h-[288px]"
>
  <div
    className="TASK_PINNED group/item flex leading-5 flex-wrap h-12 w-full bg-white hover:bg-gradient-to-t from-[#e5f9f7] to-[#f0fffd] [&+&]:border-t [&+&]:border-[#f0f9fb]"
  >
    <label
      className="relative h-12 flex items-center justify-center align-middle w-11 group-hover/item:cursor-pointer"
    >
      <input
        checked={false}
        className="invisible peer"
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="block peer-checked:hidden absolute top-1/2 right-auto bottom-auto left-1/2 w-3.5 h-3.5 -translate-x-1/2 -translate-y-1/2 bg-transparent shadow-[0_0_0_1px_#2cc5d2_inset]"
        onClick={[Function]}
      />
      <svg
        aria-hidden="true"
        className="hidden peer-checked:block absolute top-1/2 right-auto bottom-auto left-1/2 w-5 h-5 -translate-x-1/2 -translate-y-1/2 stroke-[#2cc5d2]"
        fill="none"
        stroke="currentColor"
        strokeWidth={1.5}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.5 12.75l6 6 9-13.5"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </label>
    <div
      className="overflow-hidden text-ellipsis whitespace-nowrap flex-grow"
    >
      <input
        className="text-slate-500 [.TASK\\\\_ARCHIVED_&]:text-[#aaa] leading-[48px] outline-none bg-transparent w-full focus:cursor-text"
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 4"
      />
    </div>
    <div
      className="pr-5 transition-all duration-200 ease-in"
      onClick={[Function]}
    >
      <a
        className="flex h-12 items-center"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="w-4 h-4 stroke-[#2cc5d2] [.TASK\\\\_PINNED_&]:fill-[#2cc5d2] cursor-pointer"
          fill="none"
          stroke="currentColor"
          strokeWidth={1.5}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </a>
    </div>
  </div>
  <div
    className="TASK_PINNED group/item flex leading-5 flex-wrap h-12 w-full bg-white hover:bg-gradient-to-t from-[#e5f9f7] to-[#f0fffd] [&+&]:border-t [&+&]:border-[#f0f9fb]"
  >
    <label
      className="relative h-12 flex items-center justify-center align-middle w-11 group-hover/item:cursor-pointer"
    >
      <input
        checked={false}
        className="invisible peer"
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="block peer-checked:hidden absolute top-1/2 right-auto bottom-auto left-1/2 w-3.5 h-3.5 -translate-x-1/2 -translate-y-1/2 bg-transparent shadow-[0_0_0_1px_#2cc5d2_inset]"
        onClick={[Function]}
      />
      <svg
        aria-hidden="true"
        className="hidden peer-checked:block absolute top-1/2 right-auto bottom-auto left-1/2 w-5 h-5 -translate-x-1/2 -translate-y-1/2 stroke-[#2cc5d2]"
        fill="none"
        stroke="currentColor"
        strokeWidth={1.5}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.5 12.75l6 6 9-13.5"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </label>
    <div
      className="overflow-hidden text-ellipsis whitespace-nowrap flex-grow"
    >
      <input
        className="text-slate-500 [.TASK\\\\_ARCHIVED_&]:text-[#aaa] leading-[48px] outline-none bg-transparent w-full focus:cursor-text"
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 5"
      />
    </div>
    <div
      className="pr-5 transition-all duration-200 ease-in"
      onClick={[Function]}
    >
      <a
        className="flex h-12 items-center"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="w-4 h-4 stroke-[#2cc5d2] [.TASK\\\\_PINNED_&]:fill-[#2cc5d2] cursor-pointer"
          fill="none"
          stroke="currentColor"
          strokeWidth={1.5}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </a>
    </div>
  </div>
  <div
    className="TASK_INBOX group/item flex leading-5 flex-wrap h-12 w-full bg-white hover:bg-gradient-to-t from-[#e5f9f7] to-[#f0fffd] [&+&]:border-t [&+&]:border-[#f0f9fb]"
  >
    <label
      className="relative h-12 flex items-center justify-center align-middle w-11 group-hover/item:cursor-pointer"
    >
      <input
        checked={false}
        className="invisible peer"
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="block peer-checked:hidden absolute top-1/2 right-auto bottom-auto left-1/2 w-3.5 h-3.5 -translate-x-1/2 -translate-y-1/2 bg-transparent shadow-[0_0_0_1px_#2cc5d2_inset]"
        onClick={[Function]}
      />
      <svg
        aria-hidden="true"
        className="hidden peer-checked:block absolute top-1/2 right-auto bottom-auto left-1/2 w-5 h-5 -translate-x-1/2 -translate-y-1/2 stroke-[#2cc5d2]"
        fill="none"
        stroke="currentColor"
        strokeWidth={1.5}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.5 12.75l6 6 9-13.5"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </label>
    <div
      className="overflow-hidden text-ellipsis whitespace-nowrap flex-grow"
    >
      <input
        className="text-slate-500 [.TASK\\\\_ARCHIVED_&]:text-[#aaa] leading-[48px] outline-none bg-transparent w-full focus:cursor-text"
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 1"
      />
    </div>
    <div
      className="pr-5 transition-all duration-200 ease-in"
      onClick={[Function]}
    >
      <a
        className="flex h-12 items-center"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="w-4 h-4 stroke-[#2cc5d2] [.TASK\\\\_PINNED_&]:fill-[#2cc5d2] cursor-pointer"
          fill="none"
          stroke="currentColor"
          strokeWidth={1.5}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </a>
    </div>
  </div>
  <div
    className="TASK_INBOX group/item flex leading-5 flex-wrap h-12 w-full bg-white hover:bg-gradient-to-t from-[#e5f9f7] to-[#f0fffd] [&+&]:border-t [&+&]:border-[#f0f9fb]"
  >
    <label
      className="relative h-12 flex items-center justify-center align-middle w-11 group-hover/item:cursor-pointer"
    >
      <input
        checked={false}
        className="invisible peer"
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="block peer-checked:hidden absolute top-1/2 right-auto bottom-auto left-1/2 w-3.5 h-3.5 -translate-x-1/2 -translate-y-1/2 bg-transparent shadow-[0_0_0_1px_#2cc5d2_inset]"
        onClick={[Function]}
      />
      <svg
        aria-hidden="true"
        className="hidden peer-checked:block absolute top-1/2 right-auto bottom-auto left-1/2 w-5 h-5 -translate-x-1/2 -translate-y-1/2 stroke-[#2cc5d2]"
        fill="none"
        stroke="currentColor"
        strokeWidth={1.5}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.5 12.75l6 6 9-13.5"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </label>
    <div
      className="overflow-hidden text-ellipsis whitespace-nowrap flex-grow"
    >
      <input
        className="text-slate-500 [.TASK\\\\_ARCHIVED_&]:text-[#aaa] leading-[48px] outline-none bg-transparent w-full focus:cursor-text"
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 2"
      />
    </div>
    <div
      className="pr-5 transition-all duration-200 ease-in"
      onClick={[Function]}
    >
      <a
        className="flex h-12 items-center"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="w-4 h-4 stroke-[#2cc5d2] [.TASK\\\\_PINNED_&]:fill-[#2cc5d2] cursor-pointer"
          fill="none"
          stroke="currentColor"
          strokeWidth={1.5}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </a>
    </div>
  </div>
  <div
    className="TASK_INBOX group/item flex leading-5 flex-wrap h-12 w-full bg-white hover:bg-gradient-to-t from-[#e5f9f7] to-[#f0fffd] [&+&]:border-t [&+&]:border-[#f0f9fb]"
  >
    <label
      className="relative h-12 flex items-center justify-center align-middle w-11 group-hover/item:cursor-pointer"
    >
      <input
        checked={false}
        className="invisible peer"
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="block peer-checked:hidden absolute top-1/2 right-auto bottom-auto left-1/2 w-3.5 h-3.5 -translate-x-1/2 -translate-y-1/2 bg-transparent shadow-[0_0_0_1px_#2cc5d2_inset]"
        onClick={[Function]}
      />
      <svg
        aria-hidden="true"
        className="hidden peer-checked:block absolute top-1/2 right-auto bottom-auto left-1/2 w-5 h-5 -translate-x-1/2 -translate-y-1/2 stroke-[#2cc5d2]"
        fill="none"
        stroke="currentColor"
        strokeWidth={1.5}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.5 12.75l6 6 9-13.5"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </label>
    <div
      className="overflow-hidden text-ellipsis whitespace-nowrap flex-grow"
    >
      <input
        className="text-slate-500 [.TASK\\\\_ARCHIVED_&]:text-[#aaa] leading-[48px] outline-none bg-transparent w-full focus:cursor-text"
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 3"
      />
    </div>
    <div
      className="pr-5 transition-all duration-200 ease-in"
      onClick={[Function]}
    >
      <a
        className="flex h-12 items-center"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="w-4 h-4 stroke-[#2cc5d2] [.TASK\\\\_PINNED_&]:fill-[#2cc5d2] cursor-pointer"
          fill="none"
          stroke="currentColor"
          strokeWidth={1.5}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </a>
    </div>
  </div>
  <div
    className="TASK_ARCHIVED group/item flex leading-5 flex-wrap h-12 w-full bg-white hover:bg-gradient-to-t from-[#e5f9f7] to-[#f0fffd] [&+&]:border-t [&+&]:border-[#f0f9fb]"
  >
    <label
      className="relative h-12 flex items-center justify-center align-middle w-11 group-hover/item:cursor-pointer"
    >
      <input
        checked={true}
        className="invisible peer"
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="block peer-checked:hidden absolute top-1/2 right-auto bottom-auto left-1/2 w-3.5 h-3.5 -translate-x-1/2 -translate-y-1/2 bg-transparent shadow-[0_0_0_1px_#2cc5d2_inset]"
        onClick={[Function]}
      />
      <svg
        aria-hidden="true"
        className="hidden peer-checked:block absolute top-1/2 right-auto bottom-auto left-1/2 w-5 h-5 -translate-x-1/2 -translate-y-1/2 stroke-[#2cc5d2]"
        fill="none"
        stroke="currentColor"
        strokeWidth={1.5}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.5 12.75l6 6 9-13.5"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </label>
    <div
      className="overflow-hidden text-ellipsis whitespace-nowrap flex-grow"
    >
      <input
        className="text-slate-500 [.TASK\\\\_ARCHIVED_&]:text-[#aaa] leading-[48px] outline-none bg-transparent w-full focus:cursor-text"
        placeholder="Input title"
        readOnly={true}
        type="text"
        value="Task 6"
      />
    </div>
    <div
      className="pr-5 transition-all duration-200 ease-in"
      onClick={[Function]}
    />
  </div>
</div>
`;
